--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-select": "^5.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
